--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint": "1.3.1",
     "eslint-config-dhis2": "0.0.5",
     "eslint-plugin-react": "3.3.1",
+    "image-webpack-loader": "1.6.2",
     "node-sass": "3.4.2",
     "sass-loader": "2.0.1",
     "style-loader": "0.12.3",
