--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "homepage": "https://github.com/dhis2/dhis2-pivot#readme",
   "dependencies": {
     "d2-utilizr": "^0.2.4",
-    "d2-analysis": "0.0.14"
+    "d2-analysis": "^0.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.3.13",
