--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "homepage": "https://github.com/dhis2/dhis2-pivot#readme",
   "dependencies": {
-    "d2-utilizr": "^0.2.6",
+    "d2-utilizr": "^0.2.7",
     "d2-analysis": "^0.1.0"
   },
   "devDependencies": {
@@ -39,6 +39,7 @@
     "eslint": "1.3.1",
     "eslint-config-dhis2": "0.0.5",
     "eslint-plugin-react": "3.3.1",
+    "file-loader": "0.8.5",
     "img-loader": "^1.2.2",
     "node-sass": "3.4.2",
     "sass-loader": "2.0.1",
