--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint": "./node_modules/eslint/bin/eslint.js src `git diff --cached --name-only | grep \\.js$`",
     "validate": "npm ls --depth 0",
     "start": "webpack-dev-server",
-    "build": "rm -rf build && webpack --config webpack.config.prod.js && cp ./index.html build && cp ./node_modules/babel-polyfill/dist/polyfill.min.js build && cp ./jquery.min.js build && cp ./manifest.webapp build && cp -r i18n build && cp -r dhis2 build && cp -r extjs build && cp jquery.min.js table.js && more build/table.js >> table.js && cp -f table.js build"
+    "build": "rm -rf build && webpack --config webpack.config.prod.js && cp ./index.html build && cp ./node_modules/babel-polyfill/dist/polyfill.min.js build && cp ./jquery.min.js build && cp ./manifest.webapp build && cp -r i18n build && cp -r dhis2 build && cp -r extjs build && cp jquery.min.js table.js && more build/table.js >> table.js && mv -f table.js build"
   },
   "repository": {
     "type": "git",
