--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dhis2-pivot",
   "version": "25.0.0",
-  "description": "DHIS 2 Pivot Tables",
+  "description": "DHIS 2 Pivot Table",
   "main": "index.html",
   "scripts": {
     "lint": "./node_modules/eslint/bin/eslint.js src `git diff --cached --name-only | grep \\.js$`",
@@ -25,8 +25,8 @@
   },
   "homepage": "https://github.com/dhis2/dhis2-pivot#readme",
   "dependencies": {
-    "d2-utilizr": "^0.2.10",
-    "d2-analysis": "^0.1.0"
+    "d2-utilizr": "^0.2.11",
+    "d2-analysis": "^25.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.3.13",
