--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dhis2-pivot",
+  "name": "pivot-tables-app",
   "version": "25.0.0",
   "description": "DHIS 2 Pivot Table",
   "main": "index.html",
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/dhis2/dhis2-pivot.git"
+    "url": "git+https://github.com/dhis2/pivot-tables-app.git"
   },
   "keywords": [
     "DHIS 2",
@@ -21,12 +21,12 @@
   "author": "Jan Henrik Øverland",
   "license": "BSD-3-Clause",
   "bugs": {
-    "url": "https://github.com/dhis2/dhis2-pivot/issues"
+    "url": "https://github.com/dhis2/pivot-tables-app/issues"
   },
-  "homepage": "https://github.com/dhis2/dhis2-pivot#readme",
+  "homepage": "https://github.com/dhis2/pivot-tables-app#readme",
   "dependencies": {
     "d2-utilizr": "^0.2.11",
-    "d2-analysis": "^25.0.2"
+    "d2-analysis": "^25.0.4"
   },
   "devDependencies": {
     "babel-core": "^6.3.13",
