--- a/package.json
+++ b/package.json
@@ -25,24 +25,22 @@
   },
   "homepage": "https://github.com/dhis2/pivot-tables-app#readme",
   "dependencies": {
-    "d2-utilizr": "^0.2.11",
-    "d2-analysis": "^25.0.10"
+    "d2-analysis": "25.0.10",
+    "d2-utilizr": "^0.2.11"
   },
   "devDependencies": {
     "babel-core": "^6.3.13",
+    "babel-eslint": "5.0.0-beta6",
+    "babel-loader": "^6.2.0",
+    "babel-polyfill": "^6.3.14",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-stage-2": "^6.3.13",
-    "babel-eslint": "5.0.0-beta6",
-    "babel-polyfill": "^6.3.14",
-    "babel-loader": "^6.2.0",
     "css-loader": "0.18.0",
     "eslint": "1.3.1",
     "eslint-config-dhis2": "0.0.5",
     "eslint-plugin-react": "3.3.1",
     "file-loader": "0.8.5",
     "img-loader": "^1.2.2",
-    "node-sass": "3.4.2",
-    "sass-loader": "2.0.1",
     "style-loader": "0.12.3",
     "susy": "2.2.5",
     "url-loader": "^0.5.7",
