--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "homepage": "https://github.com/dhis2/dhis2-pivot#readme",
   "dependencies": {
     "d2-utilizr": "^0.2.11",
-    "d2-analysis": "^25.0.2"
+    "d2-analysis": "26.0.2"
   },
   "devDependencies": {
     "babel-core": "^6.3.13",
