--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dhis2-pivot",
-  "version": "1.0.0",
+  "version": "24.0.0",
   "description": "DHIS 2 Pivot Tables",
   "main": "index.html",
   "scripts": {
@@ -26,7 +26,7 @@
   "homepage": "https://github.com/dhis2/dhis2-pivot#readme",
   "dependencies": {
     "d2-utilizr": "^0.2.10",
-    "d2-analysis": "^0.1.0"
+    "d2-analysis": "24.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.3.13",
