--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "homepage": "https://github.com/dhis2/dhis2-pivot#readme",
   "dependencies": {
-    "d2-analysis": "27.0.28",
+    "d2-analysis": "v27.0.29",
     "d2-utilizr": "0.2.13"
   },
   "devDependencies": {
