--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dhis2-pivot",
   "version": "28.0.1",
-  "description": "DHIS 2 Pivot Table",
+  "description": "DHIS2 pivot tables app",
   "main": "index.html",
   "scripts": {
     "lint": "./node_modules/eslint/bin/eslint.js src `git diff --cached --name-only | grep \\.js$`",
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/dhis2/dhis2-pivot.git"
+    "url": "git+https://github.com/dhis2/pivot-tables-app.git"
   },
   "keywords": [
     "DHIS 2",
@@ -23,9 +23,9 @@
   "author": "Jan Henrik Øverland",
   "license": "BSD-3-Clause",
   "bugs": {
-    "url": "https://github.com/dhis2/dhis2-pivot/issues"
+    "url": "https://github.com/dhis2/pivot-tables-app/issues"
   },
-  "homepage": "https://github.com/dhis2/dhis2-pivot#readme",
+  "homepage": "https://github.com/dhis2/pivot-tables-app#readme",
   "dependencies": {
     "d2-analysis": "28.0.0",
     "d2-utilizr": "0.2.13"
@@ -53,13 +53,13 @@
     "webpack-dev-server": "1.14.0"
   },
   "manifest.webapp": {
-    "name": "Pivot tables app",
+    "name": "DHIS2 pivot tables app",
     "icons": {
       "48": "icon.png"
     },
     "developer": {
       "url": "",
-      "name": "Jan Henrik Øverland"
+      "name": "DHIS2 visualization team"
     },
     "activities": {
       "dhis": {
