--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "validate": "npm ls --depth 0",
     "prestart": "d2-manifest package.json manifest.webapp",
     "start": "webpack-dev-server",
-    "build": "rm -rf build && webpack --config webpack.config.prod.js && cp ./index.html build && cp ./jquery*.min.js build && cp -r i18n build && cp -r dhis2 build && cp -r extjs build && npm run manifest",
+    "build": "rm -rf build && webpack --config webpack.config.prod.js && cp ./jquery*.min.js build && cp -r i18n build && cp -r dhis2 build && cp -r extjs build && npm run manifest",
     "manifest": "d2-manifest package.json build/manifest.webapp"
   },
   "repository": {
@@ -28,13 +28,14 @@
   "homepage": "https://github.com/dhis2/pivot-tables-app#readme",
   "dependencies": {
     "d2-analysis": "28.0.6",
-    "d2-utilizr": "0.2.13"
+    "d2-utilizr": "0.2.13",
+    "html-webpack-plugin": "^2.29.0"
   },
   "devDependencies": {
     "babel-core": "^6.3.13",
     "babel-eslint": "5.0.0-beta6",
     "babel-loader": "^6.2.0",
-    "babel-polyfill": "^6.3.14",
+    "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-stage-2": "^6.3.13",
     "css-loader": "0.18.0",
