--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
   "homepage": "https://github.com/dhis2/pivot-tables-app#readme",
   "dependencies": {
     "d2-analysis": "28.0.6",
-    "d2-utilizr": "0.2.13",
-    "html-webpack-plugin": "^2.29.0"
+    "d2-utilizr": "0.2.13"
   },
   "devDependencies": {
     "babel-core": "^6.3.13",
@@ -44,6 +43,7 @@
     "eslint-config-dhis2": "0.0.5",
     "eslint-plugin-react": "3.3.1",
     "file-loader": "0.8.5",
+    "html-webpack-plugin": "^2.29.0",
     "img-loader": "^1.2.2",
     "node-sass": "3.4.2",
     "sass-loader": "2.0.1",
