--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   },
   "homepage": "https://github.com/dhis2/pivot-tables-app#readme",
   "dependencies": {
-    "d2-analysis": "^29.0.11",
+    "d2-analysis": "29.0.12",
     "d2-utilizr": "0.2.13"
   },
   "devDependencies": {
