--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   "homepage": "https://github.com/dhis2/pivot-tables-app#readme",
   "dependencies": {
     "d2-analysis": "29.0.17",
-    "d2-utilizr": "0.2.13"
+    "d2-utilizr": "0.2.13",
+    "filesaver": "^0.0.13"
   },
   "devDependencies": {
     "babel-core": "^6.3.13",
