--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pivot-tables-app",
-  "version": "28.0.35",
+  "version": "28.0.36",
   "description": "Pivot tables app",
   "main": "index.html",
   "scripts": {
@@ -27,7 +27,7 @@
   },
   "homepage": "https://github.com/dhis2/pivot-tables-app#readme",
   "dependencies": {
-    "d2-analysis": "^28.0.48",
+    "d2-analysis": "28.0.51",
     "d2-utilizr": "0.2.13"
   },
   "devDependencies": {
