--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pivot-tables-app",
+  "name": "pivot-app",
   "version": "30.0.20",
   "description": "Pivot tables app",
   "main": "index.html",
@@ -9,8 +9,7 @@
     "prestart": "d2-manifest package.json manifest.webapp",
     "start": "webpack-dev-server",
     "build": "rm -rf build && webpack --config webpack.config.prod.js && cp ./index.html build && cp ./jquery*.min.js build && cp -r i18n build && cp -r dhis2 build && cp -r extjs build && npm run manifest && cp ./package.json ./build/package.json",
-    "manifest": "d2-manifest package.json build/manifest.webapp",
-    "deploy": "deploy-build"
+    "manifest": "d2-manifest package.json build/manifest.webapp"
   },
   "repository": {
     "type": "git",
@@ -32,7 +31,6 @@
     "d2-utilizr": "0.2.13"
   },
   "devDependencies": {
-    "@dhis2/deploy-build": "^1.0.4",
     "babel-core": "^6.3.13",
     "babel-eslint": "5.0.0-beta6",
     "babel-loader": "^6.2.0",
