--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pivot-tables-app",
+  "name": "pivot-app",
   "version": "30.0.20",
   "description": "Pivot tables app",
   "main": "index.html",
@@ -8,7 +8,7 @@
     "validate": "npm ls --depth 0",
     "prestart": "d2-manifest package.json manifest.webapp",
     "start": "webpack-dev-server",
-    "build": "rm -rf build && webpack --config webpack.config.prod.js && cp ./index.html build && cp ./jquery*.min.js build && cp -r i18n build && cp -r dhis2 build && cp -r extjs build && npm run manifest",
+    "build": "rm -rf build && webpack --config webpack.config.prod.js && cp ./index.html build && cp ./jquery*.min.js build && cp -r i18n build && cp -r dhis2 build && cp -r extjs build && npm run manifest && cp ./package.json ./build/package.json",
     "manifest": "d2-manifest package.json build/manifest.webapp"
   },
   "repository": {
