--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "eslint-plugin-react": "3.3.1",
     "file-loader": "0.8.5",
     "img-loader": "^1.2.2",
+    "json-loader": "^0.5.7",
     "node-sass": "4.9.0",
     "sass-loader": "7",
     "style-loader": "0.12.3",
