ci: use custom repo name target

--- a/.github/workflows/dhis2-verify-app.yml
+++ b/.github/workflows/dhis2-verify-app.yml
@@ -81,6 +81,7 @@ jobs:
               with:
                   build-dir: build
                   github-token: ${{ env.GH_TOKEN }}
+                  repo-name: pivot-tables-app
 
     release:
         runs-on: ubuntu-latest
